2001-09-08  Richard Henderson  <rth@redhat.com>

	* elf64-alpha.c (elf64_alpha_relocate_section): Soft fail
	relocation errors.  Fail gp-relative relocations against
	dynamic symbols.

2001-09-08  Alan Modra  <amodra@bigpond.net.au>

	* elf32-i386.c (elf_i386_relocate_section): Check !DEF_REGULAR
	as well as DEF_DYNAMIC in test for avoided copy relocs.
	(allocate_plt_and_got_and_discard_relocs): Likewise.
	* elf32-hppa.c (elf_i386_relocate_section): Likewise.
	(allocate_plt_and_got_and_discard_relocs): Likewise.

2001-09-07  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* elf32-mips.c (mips_elf_calculate_relocation): Fix overflow handling
	of R_MIPS_PC16.

2001-09-06  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* elf64-mips.c (mips_elf64_howto_table_rel): Fix relocation HOWTO
	definitions.
	(mips_elf64_howto_table_rel): Likewise.

2001-09-05  Tom Rix <trix@redhat.com>

	* xcofflink.c (bfd_xcoff_import_symbol): Handle import file XMC_XO
	and syscall symbols.
	(write_global_symbol) : Same.
	(bfd_xcoff_export_symbol): Remove unused syscall param.
	* libxcoff.h: Change prototype of bfd_xcoff_export symbol and
	bfd_xcoff_import_symbol.
	* bfd-in.h: Same.
	* bfd-in2.h : Regenerate.

2001-09-04  Richard Henderson  <rth@redhat.com>

	* elf64-alpha.c (SKIP_HOWTO): New.
	(elf64_alpha_howto_table): Use it to remove dead ECOFF relocs.
	Fix sizes of 16-bit mem format relocs.
	(elf64_alpha_reloc_map): Update to match.
	(elf64_alpha_relax_with_lituse): Use GPREL16 as appropriate.
	(elf64_alpha_relax_without_lituse): Likewise.
	(elf64_alpha_check_relocs): Handle GPREL16.
	(elf64_alpha_relocate_section): Likewise.
	* reloc.c (BFD_RELOC_ALPHA_USER_*): Remove.
	(BFD_RELOC_ALPHA_GPREL_HI16, BFD_RELOC_ALPHA_GPREL_LO16): New.
	* bfd-in2.h, libbfd.h: Rebuild.

2001-09-04  Jeff Law <law@redhat.com>

	* elf32-h8300.c (elf32_h8_relax_section): New function.
	(elf32_h8_relax_delete_bytes): Likewise.
	(elf32_h8_symbol_address_p): Likewise.