@@ -1,3 +1,8 @@
+2001-09-09  Richard Henderson  <rth@redhat.com>
+
+	* elf64-alpha.c (elf64_alpha_relax_with_lituse): Nop out gpdisp
+	following a call to a near function.
+
 2001-09-08  Richard Henderson  <rth@redhat.com>
 
 	* elf64-alpha.c (elf64_alpha_relocate_section): Soft fail
